--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ button:hover{transform:scale(1.1);}
 <!-- SCREEN 1 -->
 <div class="screen active" id="screen1">
   <h2>Masukan passwordnya 💌</h2>
-  <p>Clue: tanggal yang ga boleh dilupain 😉</p>
+  <p>Clue: tanggal yang ga boleh dilupain 😉 (8 angka tanpa spasi yaa 💖) (</p>
   <input type="password" id="password">
   <br><br>
   <button onclick="checkPassword()">Masuk</button>
@@ -237,3 +237,4 @@ function openLetter(){
 
 </body>
 </html>
+
